(Major) Bug fixes & Performance improvements